[package]
name = "cafs"
version = "0.0.1"
authors = ["Ivan Jager <aij+@mrph.org>"]

[lib]
name = "cafs"
path = "src/lib.rs"

[[bin]]
name = "cafs-util"
path = "src/main.rs"


[dependencies]

leveldb = "*"
db-key = "^0.0.5"
openssl = "^0.6.4"
capnp = "*"
rustc-serialize = "^0.3"
backtrace = "^0.1"
rust-sqlite = "0.2.0"

[dev-dependencies]
docopt = "*"
rustc-serialize = "*"
url = "^0.2.35"