[package]
name = "cafs"
version = "0.0.1"
authors = ["Ivan Jager <aij+@mrph.org>"]
description = "Content-addressable filesystem"
license = "AGPL-3.0"

[lib]
name = "cafs"
path = "src/lib.rs"

[[bin]]
name = "cafs-util"
path = "src/main.rs"

[[bin]]
name = "cafs-mount"
path = "src/bin/cafs.mount.rs"

[dependencies]

leveldb = "0.8.3"
db-key = "^0.0.5"
openssl = "^0.7.5"
capnp = "^0.6.2"
rustc-serialize = "^0.3"
backtrace = "^0.1"
rust-sqlite = "^0.2.0"
fuse = "^0.2.7"
#toml-config = "0.1.0"
time = "^0.1.34"

[dev-dependencies]
docopt = "^0.6.78"
rustc-serialize = "^0.3.16"
url = "^0.2.35"